--- a/wwwroot/player.html
+++ b/wwwroot/player.html
@@ -9,6 +9,7 @@
 
     <div id="login">
         <input type="text" id="username" placeholder="Your name" />
+        <input type="text" id="code" placeholder="Kod gry (PIN)"/>
         <button onclick="joinGame()">Dołącz do gry</button>
     </div>
 
@@ -25,6 +26,7 @@
 
     <script>
         let username = "";
+        let code = "";
         const connection = new signalR.HubConnectionBuilder()
             .withUrl("/gameHub")
             .build();
@@ -47,7 +49,7 @@
             alert("Gra zakończona!");
 
             // Pobierz ranking
-            fetch("/api/game/status")
+            fetch(`/api/game/status?code=${code}`)
                 .then(res => res.json())
                 .then(data => {
                     const finalList = document.getElementById("finalRankingList");
@@ -72,12 +74,15 @@
 
         function joinGame() {
             username = document.getElementById("username").value;
-            fetch("/api/player/join", {
+            code = document.getElementById("code").value;
+
+            fetch(`/api/player/join?code=${code}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ username })
             }).then(res => {
                 if (res.ok) {
+                    connection.invoke("JoinGroup", code);
                     document.getElementById("login").style.display = "none";
                     alert("You're logged.");
                 } else {
@@ -91,7 +96,7 @@
         }
 
         function sendAnswer(selectedOption, questionId) {
-            fetch("/api/player/answer", {
+            fetch(`/api/player/answer?code=${code}`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
